# ocrScanner

./: app.py  pyproject.toml  render.yaml  requirements.txt
templates/: index.html
